[gd_scene load_steps=37 format=4 uid="uid://2d566i1d3lva"]

[ext_resource type="TileSet" uid="uid://dyf0c38hkcw8q" path="res://apt_tiles.tres" id="1_1ivvi"]
[ext_resource type="Script" uid="uid://b3tp3k5ks67xq" path="res://scenes/Days/Ending/final_entry.gd" id="1_mxjn7"]
[ext_resource type="Texture2D" uid="uid://mvgkrnayxjlf" path="res://assets/misc/square.png" id="2_jnnuh"]
[ext_resource type="PackedScene" uid="uid://c8wffxipu48vg" path="res://scenes/player.tscn" id="2_nrcq8"]
[ext_resource type="PackedScene" uid="uid://cpuj6ktdfqhdu" path="res://scenes/change_room.tscn" id="3_31x2o"]
[ext_resource type="Texture2D" uid="uid://d4cr6d3ael2ty" path="res://assets/objects/welcome_mat.png" id="4_sbbj2"]
[ext_resource type="PackedScene" uid="uid://c3r0748snbt8m" path="res://scenes/Objects/coatHangerFinal.tscn" id="6_1ivvi"]
[ext_resource type="PackedScene" uid="uid://d24rahutnton5" path="res://scenes/DialogueArea.tscn" id="6_cgwns"]
[ext_resource type="Script" uid="uid://divt8ny53jpna" path="res://scripts/DialogueExportResource.gd" id="7_jnnuh"]
[ext_resource type="Script" uid="uid://c7hf8sppb4268" path="res://scripts/DialogueTextResource.gd" id="8_kmks6"]
[ext_resource type="AudioStream" uid="uid://dy3b7ol61unl7" path="res://assets/sfx/ian_voice.wav" id="9_e7b1q"]
[ext_resource type="Texture2D" uid="uid://b5hki7kvg72vf" path="res://assets/misc/dust_particle.png" id="10_ysomm"]
[ext_resource type="FontFile" uid="uid://bwsast0682an6" path="res://assets/fonts/8_bit_1_6/8bit16.ttf" id="11_nrcq8"]
[ext_resource type="Script" uid="uid://bj218rqao0syu" path="res://scripts/DialogueFunctionResource.gd" id="12_cgwns"]
[ext_resource type="Texture2D" uid="uid://ejnr2jymn831" path="res://assets/misc/right_arrow.png" id="12_sbbj2"]
[ext_resource type="Texture2D" uid="uid://wepy2t1yokgp" path="res://assets/misc/left_arrow.png" id="13_mxjn7"]
[ext_resource type="PackedScene" uid="uid://cne7csaj4qa1k" path="res://scenes/WhiteDialogueArea.tscn" id="17_kmks6"]
[ext_resource type="AudioStream" uid="uid://dt2jfnfm6h0ot" path="res://assets/sfx/final_door.mp3" id="18_e7b1q"]
[ext_resource type="AudioStream" uid="uid://dxbcqje8devlu" path="res://assets/sfx/dramatic_sound.mp3" id="19_ysomm"]

[sub_resource type="Resource" id="Resource_kmks6"]
script = ExtResource("8_kmks6")
text = "*huh, i'm kinda hungry."
text_speed = 12.0
text_sound = ExtResource("9_e7b1q")
text_volume_pitch_min = 0.8
text_volume_pitch_max = 0.75
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_ysomm"]
script = ExtResource("12_cgwns")
target_path = NodePath("..")
function_name = "doorOpen"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e7b1q"]
size = Vector2(42, 38)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_kmks6"]
light_mode = 1

[sub_resource type="Gradient" id="Gradient_5sxgv"]
offsets = PackedFloat32Array(0, 0.7310606)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0un0t"]
gradient = SubResource("Gradient_5sxgv")
width = 244
height = 244
fill = 1
fill_from = Vector2(0.5, 0.4871795)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ma1rf"]
size = Vector2(20, 7)

[sub_resource type="Curve" id="Curve_iro8m"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.20610687, 0.09520006), -0.07785186, -0.07785186, 0, 0, Vector2(0.759542, 0.053600073), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_qkk3q"]
width = 2048
curve = SubResource("Curve_iro8m")

[sub_resource type="Curve" id="Curve_vcalv"]
_data = [Vector2(0, 0.56320006), 0.0, 0.0, 0, 0, Vector2(0.27480915, 1), 0.0, 0.0, 0, 0, Vector2(0.71374047, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.56320006), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_cir52"]
width = 2048
curve = SubResource("Curve_vcalv")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_22g0a"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(45, 30, 1)
direction = Vector3(-1, 0, 0)
spread = 180.0
initial_velocity_min = 0.099999994
initial_velocity_max = 0.5
gravity = Vector3(-1, 2, 0)
scale_curve = SubResource("CurveTexture_cir52")
alpha_curve = SubResource("CurveTexture_qkk3q")

[sub_resource type="Resource" id="Resource_xsrsl"]
script = ExtResource("8_kmks6")
text = "*it's my jacket."
text_speed = 14.0
text_sound = ExtResource("9_e7b1q")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nrcq8"]
size = Vector2(11, 10)

[sub_resource type="Resource" id="Resource_xoulh"]
script = ExtResource("8_kmks6")
text = "*looks like it's warm outside"
text_speed = 14.0
text_sound = ExtResource("9_e7b1q")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.8
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_jnnuh"]
script = ExtResource("12_cgwns")
target_path = NodePath("..")
function_name = "askIfReady"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_31x2o"]
size = Vector2(14, 10)

[node name="FinalEntry" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_mxjn7")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(50, 18)

[node name="finalDialogue" parent="." instance=ExtResource("17_kmks6")]
position = Vector2(24, 3)
activate_instant = true
only_activate_once = true
dialogue = Array[ExtResource("7_jnnuh")]([SubResource("Resource_kmks6"), SubResource("Resource_ysomm")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="finalDialogue"]
shape = SubResource("RectangleShape2D_e7b1q")
disabled = true

[node name="white" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 2
material = SubResource("CanvasItemMaterial_kmks6")
position = Vector2(50, 19)
scale = Vector2(327.00003, 188)
texture = ExtResource("2_jnnuh")
metadata/_edit_lock_ = true

[node name="ceilingLight" type="PointLight2D" parent="."]
position = Vector2(49, 16)
scale = Vector2(0.3852459, 0.2868852)
color = Color(0.9843529, 0.98745495, 0.9660104, 1)
energy = 0.4
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_0un0t")

[node name="Tiles" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAACAAAAAAAAAAAAAAABAAAAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAAAAAAAAAAAAAAEAP//AAADAAMAAAABAP//AAABAAAAAAACAP7/AAAGAAIAAAACAP//AAAGAAMAAAADAP7/AAAGAAAAAAADAP//AAAGAAEAAAAAAP7/AAAGAAAAAAAAAP//AAAGAAEAAAAFAP7/AAAGAAIAAAAFAP//AAAGAAMAAAABAP7/AAADAAIAAAAEAP7/AAADAAIAAAD///7/AAACAAAAAAD/////AAACAAEAAAAGAP7/AAAEAAAAAAAGAP//AAAEAAEAAAD//wAAAAACAAIAAAD//wEAAAACAAIAAAAGAAAAAAAEAAMAAAAGAAIAAAABAAMAAAAFAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAADAAIAAAAAAAAAAAACAAIAAAAAAAAAAAABAAIAAAAAAAAAAAAAAAIAAAAAAAAAAAD//wIAAAACAAIAAAD//wMAAAACAAQAAAAAAAMAAAADAAQAAAABAAMAAAADAAQAAAACAAMAAAADAAQAAAADAAMAAAADAAQAAAAEAAMAAAADAAQAAAAFAAMAAAADAAQAAAAGAAMAAAAEAAQAAAAGAAEAAAAFAAEAAAA=")
tile_set = ExtResource("1_1ivvi")
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("2_nrcq8")]
position = Vector2(50, 21)
speed = 50.0

[node name="toLivingroom" parent="." instance=ExtResource("3_31x2o")]
position = Vector2(72, -5)
wanted_room_path = "res://scenes/Days/Ending/final_livingroom.tscn"
wanted_player_pos = Vector2(25, 42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="toLivingroom"]
shape = SubResource("RectangleShape2D_ma1rf")

[node name="toBathroom" parent="." instance=ExtResource("3_31x2o")]
position = Vector2(103, 24)
rotation = 1.5707964
wanted_room_path = "res://scenes/Days/Ending/final_bathroom.tscn"
wanted_player_pos = Vector2(23, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="toBathroom"]
shape = SubResource("RectangleShape2D_ma1rf")

[node name="WelcomeMat" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(24, 4)
texture = ExtResource("4_sbbj2")

[node name="dust" type="GPUParticles2D" parent="."]
position = Vector2(48, 16)
amount = 30
texture = ExtResource("10_ysomm")
speed_scale = 0.2
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_22g0a")

[node name="ambience" type="CanvasModulate" parent="."]
color = Color(0.7902331, 0.7830125, 0.7731727, 1)

[node name="CoatHanger2" parent="." instance=ExtResource("6_1ivvi")]
position = Vector2(49, 1)

[node name="hanger_dialog2" parent="." instance=ExtResource("6_cgwns")]
position = Vector2(49, 2)
dialogue = Array[ExtResource("7_jnnuh")]([SubResource("Resource_xsrsl")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="hanger_dialog2"]
position = Vector2(-0.5, -3)
shape = SubResource("RectangleShape2D_nrcq8")

[node name="door_dialog" parent="." instance=ExtResource("6_cgwns")]
position = Vector2(24, -5)
dialogue = Array[ExtResource("7_jnnuh")]([SubResource("Resource_xoulh"), SubResource("Resource_jnnuh")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="door_dialog"]
shape = SubResource("RectangleShape2D_31x2o")

[node name="question" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -17.0
offset_top = -63.0
offset_right = 121.0
offset_bottom = -51.0
theme_override_fonts/font = ExtResource("11_nrcq8")
theme_override_font_sizes/font_size = 8
text = "are you ready to leave?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="yes_label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 25.0
offset_top = -35.0
offset_right = 47.0
offset_bottom = -23.0
theme_override_fonts/font = ExtResource("11_nrcq8")
theme_override_font_sizes/font_size = 8
text = "yes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="no_label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 56.0
offset_top = -35.0
offset_right = 78.0
offset_bottom = -23.0
theme_override_fonts/font = ExtResource("11_nrcq8")
theme_override_font_sizes/font_size = 8
text = "no"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightArrow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(66, -42)
texture = ExtResource("12_sbbj2")
hframes = 2

[node name="LeftArrow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(36, -42)
texture = ExtResource("13_mxjn7")
hframes = 2

[node name="finalDoor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_e7b1q")
volume_db = 1.724

[node name="dramaticSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_ysomm")
volume_db = -9.193
